--- a/client/src/components/login/_login.scss
+++ b/client/src/components/login/_login.scss
@@ -111,6 +111,7 @@
         width: 25px;
         background-color: theme_color("light");
         border: 3px solid theme_color("dark");
+        transition: all 200ms ease-in-out;
 
         &:after {
           content: "";
